# rasterizer

./: CMakeLists.txt
include/rasterizer/: attribute.hpp  color.hpp  cube.hpp  draw_command.hpp  framebuffer.hpp  image.hpp  image_view.hpp  light.hpp  matrix.hpp  mesh.hpp  renderer.hpp  sampler.hpp  settings.hpp  texture.hpp  vector.hpp  viewport.hpp
source/: cube.cpp  image.cpp  main.cpp  renderer.cpp  texture.cpp
